@@ -45,6 +45,7 @@ This module currently contains the following:
 - In ``typing`` since Python 3.11
 
   - ``assert_never``
+  - ``assert_type``
   - ``Never``
   - ``reveal_type``
   - ``Self`` (see PEP 673)
