@@ -1231,6 +1231,27 @@ else:
         """
         return isinstance(tp, tuple(_TYPEDDICT_TYPES))
 
+
+if hasattr(typing, "assert_type"):
+    assert_type = typing.assert_type
+
+else:
+    def assert_type(val, typ, /):
+        """Assert (to the type checker) that the value is of the given type.
+
+        When the type checker encounters a call to assert_type(), it
+        emits an error if the value is not of the specified type::
+
+            def greet(name: str) -> None:
+                assert_type(name, str)  # ok
+                assert_type(name, int)  # type checker error
+
+        At runtime this returns the first argument unchanged and otherwise
+        does nothing.
+        """
+        return val
+
+
 if hasattr(typing, "Required"):
     get_type_hints = typing.get_type_hints
 elif PEP_560:
